--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     image: "confio/tgrade:local"
     command: "tgrade start --trace --home=/node/node0/tgrade --log_level=info"
     ports:
-      - "26656-26657:26656-26657"
+      - "26656-26657:26656-26657" # p2p, rpc
       - "1317:1317" # rest legacy
       - "9090:9090" # grpc query
     volumes:
