--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
   golang:
     docker:
       - image: circleci/golang:1.15
-        user: root # for local testing: https://github.com/CircleCI-Public/circleci-cli/issues/291
+#        user: root # for local testing: https://github.com/CircleCI-Public/circleci-cli/issues/291
     working_directory: /go/src/github.com/confio/tgrade
 
 commands:
@@ -199,7 +199,7 @@ workflows:
       - test-system:
           requires:
             - setup-dependencies
-          filters:
-            branches:
-              only:
-                - master
+#          filters:
+#            branches:
+#              only:
+#                - master
