--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -1,11 +1,11 @@
-name: "Security Scan"
-# Run workflow each time code is pushed to your repository and on a schedule.
-# The scheduled workflow runs every at 00:00 on Sunday UTC time.
+name: Run Gosec
 on:
   push:
-  schedule:
-  - cron: '0 0 * * 0'
-
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -17,10 +17,4 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          # we let the report trigger content trigger a failure using the GitHub Security features.
-          args: '-no-fail -fmt sarif -out results.sarif ./...'
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: results.sarif
+          args: ./...
