Kill pending test instances

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,8 @@ jobs:
     executor: golang
     parallelism: 1
     steps:
-      - setup_remote_docker
+      - attach_workspace:
+          at: /tmp/workspace
       - checkout
       - restore_cache:
           keys:
@@ -100,10 +101,15 @@ jobs:
           name: Build and run system tests
           command: |
             make test-system
-            mkdir -p /tmp/logs
-            copy testnet/*.out /tmp/logs
       - store_artifacts:
-          path: /tmp/logs
+          path: /go/src/github.com/confio/tgrade/testnet/node0.out
+      - store_artifacts:
+          path: /go/src/github.com/confio/tgrade/testnet/node1.out
+      - store_artifacts:
+          path: /go/src/github.com/confio/tgrade/testnet/node2.out
+      - store_artifacts:
+          path: /go/src/github.com/confio/tgrade/testnet/node3.out
+
   upload-coverage:
     executor: golang
     steps:
@@ -169,6 +175,8 @@ jobs:
     executor: golang
     parallelism: 1
     steps:
+      - attach_workspace:
+            at: /tmp/workspace
       - checkout
       - restore_cache:
           keys:
