--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,6 +111,16 @@ jobs:
       - store_artifacts:
           path: /go/src/github.com/confio/tgrade/testnet/node3.out
 
+  simulations:
+    executor: golang
+    parallelism: 1
+    steps:
+      - checkout
+      - run:
+          name: Run simulations
+          command: |
+            make test-sim-multi-seed-short
+
   upload-coverage:
     executor: golang
     steps:
@@ -238,5 +248,8 @@ workflows:
           requires:
             - setup-dependencies
       - gosec:
+          requires:
+            - setup-dependencies
+      - simulations:
           requires:
             - setup-dependencies
