--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ executors:
   golang:
     docker:
       # https://hub.docker.com/r/circleci/golang/
-      - image: cimg/go:1.17
+      - image: cimg/go:1.13
+        user: root
     # user: root # for local testing: https://github.com/CircleCI-Public/circleci-cli/issues/291
     working_directory: /go/src/github.com/confio/tgrade
 
