--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,12 +114,15 @@ jobs:
   simulations:
     executor: golang
     parallelism: 1
+    resource_class: large
     steps:
       - checkout
       - run:
           name: Run simulations
           command: |
             make test-sim-multi-seed-short
+      - store_artifacts:
+          path: /tmp
 
   upload-coverage:
     executor: golang
