--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,7 @@ jobs:
   test-system:
     executor: golang
     parallelism: 1
+    resource_class: large
     steps:
       - attach_workspace:
           at: /tmp/workspace
@@ -114,7 +115,7 @@ jobs:
   simulations:
     executor: golang
     parallelism: 1
-    resource_class: large
+    resource_class: xlarge
     steps:
       - checkout
       - run:
@@ -249,10 +250,10 @@ workflows:
             - test-cover
       - test-system:
           requires:
-            - setup-dependencies
+            - test-cover
       - gosec:
           requires:
             - setup-dependencies
       - simulations:
           requires:
-            - setup-dependencies
+            - test-cover
