--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,8 +153,7 @@ jobs:
           at: /tmp/workspace
       - checkout
       - setup_remote_docker:
-          # >= v20.10 https://wiki.alpinelinux.org/wiki/Release_Notes_for_Alpine_3.14.0#faccessat2
-        docker_layer_caching: true
+          docker_layer_caching: true
       - run:
           name: Build Docker artifact
           command: docker build --pull -t "confio/tgrade:${CIRCLE_SHA1}" .
@@ -178,6 +177,7 @@ jobs:
           steps:
             - run:
                 name: Push application Docker image to docker hub
+                command: |
                   docker tag "confio/tgrade:${CIRCLE_SHA1}" confio/tgrade:latest
                   docker login --password-stdin -u "$DOCKER_USER" \<<<"$DOCKER_PASS"
                   docker push confio/tgrade:latest
@@ -190,7 +190,6 @@ jobs:
           at: /tmp/workspace
       - checkout
       - setup_remote_docker:
-          # >= v20.10 https://wiki.alpinelinux.org/wiki/Release_Notes_for_Alpine_3.14.0#faccessat2
           docker_layer_caching: true
       - run:
           name: Build Docker artifact
